changing title color

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ button{outline: none!important;} /* Prevent ugly blue glow on chrome and safari 
 
 
 a{
-	color:#939392!important;
+	color:#6f6f6e!important;
 }
  a:hover{
 	color:#000000!important;
