transferring self hosting to github

--- a/style.css
+++ b/style.css
@@ -1,18 +1,12 @@
-#bloc-5{
-    background-color: darkgrey;
-    color: white;
+.smallmargin{
+    margin:0 4px;
 }
 
-    #first-block{
-    margin: 100px 0px;
+.img-gallery{
+    width:100%;
 }
-
-#first-btn{
-    margin-top: 20px;
-}
-
 /*-----------------------------------------------------------------------------------*/
-/*	    test with pic
+/*	    20150729 only email
 /*      Built with Blocs
 /*-----------------------------------------------------------------------------------*/
 
@@ -22,35 +16,26 @@ body{
     background:#FFF;
     overflow-x:hidden;
     -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 a:hover{text-decoration: none; cursor:pointer;}
 
 button{outline: none!important;} /* Prevent ugly blue glow on chrome and safari */
 
 
-a{
-	color:#6f6f6e!important;
-}
- a:hover{
-	color:#000000!important;
-	 text-decoration: none;
-	 cursor:pointer;
-}
-
+   
 
 
 /* Globals type styling */
  h1, h2, h3, h4, h5, h6, p, label, .btn, a{
-	font-family:Helvetica;
+	font-family:PT Sans;
 }
 
 
 /* Site container width */
 
 .container{
-	width:100%;
-	padding-left:15px;
-	padding-right:15px;
+	max-width:970px;
 }
 
 /* = Blocs
@@ -60,50 +45,22 @@ a{
 	width:100%;
 	clear:both;
 	background: 50% 50% no-repeat;
-	padding:0 50px;
+	padding:0 0px;
 	background-size: cover;
 }
 .bloc .container{
-	padding-left:0px;
-	padding-right:0px;
+	padding-left:0;
+	padding-right:0;
 }
 
 
 /* Sizes */
 
-.bloc-xxl{
-	padding:200px 50px;
-}
-.bloc-lg{
-	padding:60px 50px;
+.bloc-md{
+	padding:50px;
 }
 .bloc-sm{
-	padding:10px 50px;
-}
-
-
-/* Group Styles */
-
-.bloc-group{
-	width:100%;
-	display:table;
-	table-layout: fixed;
-}
-.bloc-group .bloc{
-	display: table-cell;
-	vertical-align: top;
-}
-.bloc-tile-2{
-	width:50%;
-}
-.bloc-tile-3{
-	width:33.33333333%;
-}
-.bloc-tile-4{
-	width:25%;
-}
-.bloc-tile-2 .container, .bloc-tile-3 .container, .bloc-tile-4 .container{
-	width:100%;
+	padding:20px 50px;
 }
 
 
@@ -115,12 +72,8 @@ a{
 .bg-center{
 	-webkit-background-size: auto;
 }
-
-
-/* Background Effects */
-
-.b-parallax{
-	background-attachment:fixed;
+.bg-tl-edge{
+	background: top left no-repeat;
 }
 
 
@@ -212,8 +165,20 @@ a{
 	border-color:rgba(0,0,0,.3);
 }
 
+/* Row Margin Offsets */
+
+.voffset{
+	margin-top:30px;
+}
+.voffset-lg{
+	margin-top:80px;
+}
+
 /* Bloc text custom styling */
 
+#bloc-1 h4{
+	line-height: 25px;
+}
 
 /* = NavBar
 -------------------------------------------------------------- */
@@ -305,20 +270,20 @@ a{
 .nav > li > .dropdown a{
 	background: none!important;
 	display: block;
-	padding: 10px 15px;
+	padding: 15px 15px;
 }
 
 nav .caret{
 	margin: 0 5px;
 }
-.hero .hero-nav{
-	padding-left:inherit;
-	padding-right:inherit;
-}
 
 /* = Bric adjustment margins
 -------------------------------------------------------------- */
 
+.mg-sm{
+	margin-top:10px;
+	margin-bottom:5px;
+}
 .mg-md{
 	margin-top:10px;
 	margin-bottom:20px;
@@ -330,35 +295,16 @@ nav .caret{
 
 /* = Buttons
 -------------------------------------------------------------- */
-#signupbutton{
-    -webkit-align-content: center;
-    -ms-flex-line-pack: center;
-    align-content: center;
-}
-
 
 .btn{
-	margin: 0;
-    padding: 10px 50px;
+	margin: 0 5px 5px 0;
 }
 .btn.pull-right{
 	margin: 0 0 5px 5px;
 }
-.btn-d, .btn-d:focus{
-    position: relative;
+.btn-d,.btn-d:hover,.btn-d:focus{
 	color:#FFF!important;
 	background:rgba(0,0,0,.3);
-}
-
-.btn-d:hover{
-    background:rgba(0,0,0,.5);
-    color:#FFF!important;
-    top:1px;
-}
-
-.btn-d:active{
-
-    color:#FFF!important;
 }
 
 /* Prevent ugly blue glow on chrome and safari */
@@ -368,9 +314,14 @@ button{
 
 .dropdown a .caret{
 	margin:0 0 0 5px}
+/* = Icons
+-------------------------------------------------------------- */
+.icon-sm{
+	font-size:18px!important;
+}
 
 
-NaN
+
 
 .panel-sq, .panel-sq .panel-heading, .panel-sq .panel-footer{
 	border-radius:0;
@@ -401,17 +352,33 @@ iframe{
 .bgc-white{
 	background-color:#ffffff;
 }
+.bgc-liver{
+	background-color:#505050;
+}
 
 /* Bloc image backgrounds */
 
+.bg-open-for-test{
+	background-image:url("img/open%20for%20test.jpg");
+}
 .bg-pic1{
 	background-image:url("img/pic1.jpg");
+}
+.bg-me-applying{
+	background-image:url("img/me_applying.jpg");
 }
 
 
 
 /* = Mobile adjustments 
 -------------------------------------------------------------- */
+@media (max-width: 1024px)
+{
+    .bloc{
+        padding-left: 20px; 
+        padding-right: 20px;  
+    }
+}
 @media (max-width: 768px)
 {
     .container{width:100%;}
@@ -420,8 +387,6 @@ iframe{
 }
 @media (max-width: 767px)
 {
-
-    
     .page-container{
         overflow-x: hidden;
         position:relative;
@@ -430,9 +395,6 @@ iframe{
         padding-left:10px!important; 
         padding-right:10px!important; 
     }
-    h3{
-        font-size: 22px;
-    }<!-- self-defined-->
     #hero-bloc h1{
         font-size:40px;
     }
@@ -521,7 +483,7 @@ iframe{
 	   padding-right: 10px;
     }
     .bloc-xxl,.bloc-xl,.bloc-lg{
-        padding: 0px 0;
+        padding: 40px 0;
     }
     .bloc-sm,.bloc-md{
         padding-left: 0; 
@@ -546,7 +508,7 @@ iframe{
         padding:5px;
     }
     .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
-        margin-top: 30px;
-        margin-bottom: 30px;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 }
